samples/_failures_safe/1761621139_b2f728_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_403b3127.c: In function ‘parser_init’:
./samples/SAFE/__tmp_403b3127.c:157:29: error: ‘lex’ undeclared (first use in this function); did you mean ‘lexer’?
  157 |     parser->current_token = lex
      |                             ^~~
      |                             lexer
./samples/SAFE/__tmp_403b3127.c:157:29: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_403b3127.c:157:32: error: expected ‘;’ at end of input
  157 |     parser->current_token = lex
      |                                ^
      |                                ;
./samples/SAFE/__tmp_403b3127.c:157:5: error: expected declaration or statement at end of input
  157 |     parser->current_token = lex
      |     ^~~~~~
